--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@types/node": "18.15.11",
     "@types/react": "18.0.37",
     "@types/react-dom": "18.0.11",
+    "@vercel/analytics": "^1.0.0",
     "autoprefixer": "10.4.14",
     "lottie-web": "^5.11.0",
     "next": "13.3.0",
